# modern-data-eng

./: .gitignore  Dockerfile.airflow  README.md  create_topics.py  docker-compose-ls.yaml  docker-compose.yaml  lambda_function.py  output.json  output.txt  package_lambda.py  pyproject.toml  seed_s3.py  setup_commands.txt  test_log.py  test_logging.py  test_webhook.py  year=2024_month=01_day=01_pageview_0.json
batch/: infra.yaml  seed_s3.py
batch/dags/: batch_dag.py
batch/dags/include/: gx_init_script.py
batch/dags/include/gx/: great_expectations.yml
batch/dags/util/: s3.py  validate.py
batch_transform/: lambda_function.py  requirements.txt
dags/: batch_dag.py
dags/include/gx/checkpoints/: aggregate_data_checkpoint.yml
dags/include/gx/expectations/: .ge_store_backend_id  page_view_suite.json
dags/util/: notify.py  sql.py  validate.py
real_time/: infra.yaml  poll_redis.py
real_time/price_adjuster/: lambda_function.py  requirements.txt
real_time/s3_event_processor/: lambda_function.py
signoz_confs/: otel-collector-config.yaml
signoz_confs/data/alertmanager/: nflog
signoz_confs/data/clickhouse/: uuid
signoz_confs/data/clickhouse/data/signoz_logs/: distributed_logs  distributed_logs_attribute_keys  distributed_logs_resource_keys  distributed_tag_attributes  distributed_usage  logs  logs_attribute_keys  logs_resource_keys  schema_migrations  tag_attributes  usage
signoz_confs/data/clickhouse/metadata/: default  default.sql  signoz_logs  signoz_logs.sql  signoz_metrics  signoz_metrics.sql  signoz_traces  signoz_traces.sql  system  system.sql
signoz_confs/data/signoz/: signoz.db
validate_data/: lambda_function.py  requirements.txt
volume/cache/: machine.json
(+2148 files in other folders)
