[tool.poetry]
name = "modern-data-eng"
version = "0.1.0"
description = ""
authors = ["rmoynihan <rmoynihan@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
awscli-local = {extras = ["ver1"], version = "^0.22.0"}
localstack-client = "^2.5"
faker = "^22.4.0"
aioboto3 = "^12.2.0"
boto3 = "1.33.2"
apache-airflow = {extras = ["amazon"], version = "^2.8.1"}
great-expectations = "^0.18.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
